--- a/resources/views/dashboard/new.edge
+++ b/resources/views/dashboard/new.edge
@@ -55,7 +55,7 @@
       </div>
       <div class="input-group mb-3">
         <input type="file" class="form-control" id="tracksInput" name="tracks" required>
-        <label class="input-group-text" for="coverInput">Архив с треками</label>
+        <label class="input-group-text" for="coverInput">Архив с треками(.zip)</label>
       </div>
       <button class="w-100 btn btn-lg btn-primary" type="submit">Создать</button>
     </form>
